--- a/napelem.html
+++ b/napelem.html
@@ -48,6 +48,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#teljesitmeny">Kinyerhető teljesítmény</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="#tajolas">Megfelelő tájolás</a>
       </li>     
     </ul>
   </div>
@@ -92,14 +95,17 @@
     </div>
     <div class="col-lg-6" id="elsomagyar">
       <h2 class="display-4">Az első magyar napelemgyár</h2>
-      <p>Magyarországon az első napelemgyárat 1997-ben nyitották meg, a Dunasolar Napelemgyártó Rt. 1997 tavaszán kezdte meg a működését. A beruházás részben amerikai, részben magyar tőke bevonásával valósult meg, a budapesti telephelyen működő gyár egy magyar feltaláló szabadalmát alapul véve folytatta tevékenységét.A 9,2 millió dolláros beruházás induló tőkéjét az amerikai Energy Photovoltaics Inc. 51%-ban, a Magyar Fejlesztési Bank Rt. 49%-ban állta.A technológia a maga idejében forradalminak számított, a Dunasolar gyárában csúcstechnológiának számító eljárással készültek a napelemek. Az 1990-es évek közepén a budapesti gyárban használt amorf szilícium (a-Si) vékonyréteg-technológia valóban forradalminak volt mondható a napelemek gyártási folyamata során.</p>
+      <p>Magyarországon az első napelemgyárat 1997-ben nyitották meg, a <a target="_blank" href="https://hu.wikipedia.org/wiki/Napelem#A_Dunasolar_öröksége .">Dunasolar</a> Napelemgyártó Rt. 1997 tavaszán kezdte meg a működését. A beruházás részben amerikai, részben magyar tőke bevonásával valósult meg, a budapesti telephelyen működő gyár egy magyar feltaláló szabadalmát alapul véve folytatta tevékenységét.A 9,2 millió dolláros beruházás induló tőkéjét az amerikai Energy Photovoltaics Inc. 51%-ban, a Magyar Fejlesztési Bank Rt. 49%-ban állta.A technológia a maga idejében forradalminak számított, a <a target="_blank" href="https://hu.wikipedia.org/wiki/Napelem#A_Dunasolar_öröksége .">Dunasolar</a> gyárában csúcstechnológiának számító eljárással készültek a napelemek. Az 1990-es évek közepén a budapesti gyárban használt amorf szilícium (a-Si) vékonyréteg-technológia valóban forradalminak volt mondható a napelemek gyártási folyamata során.</p>
     </div>
    </div>
    <div class="row">
-    <div class="col-lg-12" id="fajtak">
+    <div class="col-lg-8" id="fajtak">
+      <h2 class="display-4">A napelemek fajtái</h2> 
+      <img src="pictures/napelem-szereles.jpeg" class="img-thumbnail" alt="napelem-szereles" title="napelem-szereles"/> 
+    <div class="col-lg-4 "" id="magyarazat">
       <h2 class="display-4">A napelemek fajtái</h2> 
       <p>Alapanyag szerint többféle napelemet különböztetünk meg:</p>
-      <ul>
+      <ol>
         <li>Kristályos napelemek</li>
         <li>Gallium-arzenid vegyületen alapú napelemek</li>
         <li>Amorf szilícium napelemek</li>
@@ -107,12 +113,11 @@
         <li>Szerves festék alapú napelemek</li>
         <li>Szerves anyagokból (polimerekből) készült napelemek</li>
         <li>Szerves-szervetlen perovszkitek alapján készült napelemek</li>
-      </ul>
-      <img src="pictures/napelem-szereles.jpeg" class="img-thumbnail" alt="napelem-szereles" title="napelem-szereles"/>      
+      </ol>     
      </div>
     </div>
     <div class="row">
-    <div class="col-lg-6" id="teljesitmeny">
+    <div class="col-lg-4" id="teljesitmeny">
       <h2 class="display-4">Kinyerhető teljesítmény</h2>    
       <p>A napelemekből kinyerhető teljesítmény függ a fény beesési szögétől, a megvilágítás intenzitásától, és a napelemre csatolt terheléstől. A fény intenzitását kevéssé tudjuk befolyásolni, míg a másik két paraméter elméletileg kézben tartható.</p>    
       <p>A napelem beépítése szerint lehet fix vagy napkövető jellegű.</p>
