--- a/napelem.html
+++ b/napelem.html
@@ -100,10 +100,22 @@
    </div>
    <div class="row">
     <div class="col-lg-8" id="fajtak">
-      <h2 class="display-4">A napelemek fajtái</h2> 
-      <img src="pictures/napelem-szereles.jpeg" class="img-thumbnail" alt="napelem-szereles" title="napelem-szereles"/> 
-    <div class="col-lg-4 "" id="magyarazat">
-      <h2 class="display-4">A napelemek fajtái</h2> 
+      <h2 class="display-4">A napelemek fajtái</h2>
+      <p>Alapanyag szerint többféle napelemet különböztetünk meg:</p>
+      <ul>
+        <li>Kristályos napelemek</li>
+        <li>Gallium-arzenid vegyületen alapú napelemek</li>
+        <li>Amorf szilícium napelemek</li>
+        <li>Egyéb vegyület-félvezető alapú napeleme</li>
+        <li>Szerves festék alapú napelemek</li>
+        <li>Szerves anyagokból (polimerekből) készült napelemek</li>
+        <li>Szerves-szervetlen perovszkitek alapján készült napelemek</li>
+      </ul>
+      <img src="pictures/napelem-szereles.jpeg" class="img-thumbnail" alt="napelem-szereles"
+        title="napelem-szereles" />
+    </div>
+    <div class="col-lg-4" id="magyarazat">
+      <h2 class="display-4">A napelemek fajtái</h2>
       <p>Alapanyag szerint többféle napelemet különböztetünk meg:</p>
       <ol>
         <li>Kristályos napelemek</li>
@@ -113,8 +125,7 @@
         <li>Szerves festék alapú napelemek</li>
         <li>Szerves anyagokból (polimerekből) készült napelemek</li>
         <li>Szerves-szervetlen perovszkitek alapján készült napelemek</li>
-      </ol>     
-     </div>
+      </ol>
     </div>
     <div class="row">
     <div class="col-lg-4" id="teljesitmeny">
